fixer l'ajoute d'une multiples tags et generete docummentation de cette swagger
