# routes/api.php
@@ -19,6 +19,7 @@ Route::prefix('v1')->group(function () {
 
     Route::get('tags', [TagController::class, 'index']);
     Route::post('tags', [TagController::class, 'store']);
+    Route::post('tags/multiple', [TagController::class, 'storeMultiple']); 
     Route::get('tags/{id}', [TagController::class, 'show']);
     Route::put('tags/{id}', [TagController::class, 'update']);
     Route::delete('tags/{id}', [TagController::class, 'destroy']);
